# autoeject-releases

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
frontend-dist/: index.html
frontend-dist/assets/css/: styles.css
frontend-dist/assets/img/: logo_autoeject.psd
frontend-dist/assets/js/: index.ts
frontend-dist/assets/js/commands/: applySwapRules.ts  plateRestrictions.ts  swapRules.ts
frontend-dist/assets/js/config/: README-UIVisibility.md  colors.ts  initialize.ts  materialConfig.ts  mode.ts  printerTemplates.ts  state.ts  uiVisibility.example.js  uiVisibility.ts  xmlConfig.ts
frontend-dist/assets/js/constants/: constants.ts  errorMessages.ts
frontend-dist/assets/js/gcode/: buildGcode.ts  gcodeManipulation.ts  gcodeUtils.ts  m73ProgressTransform.ts  readGcode.ts
frontend-dist/assets/js/i18n/: i18n.ts
frontend-dist/assets/js/io/: export3mf.ts  exportGcode.ts  exportGcodeAdapter.ts  ioUtils.ts  read3mf.ts
frontend-dist/assets/js/platform/: adapters.ts  detection.ts  index.ts
frontend-dist/assets/js/testfiles/: gcode2.gcode  generated_plate_1.json  plate_1.json  project_settings_modified_data.d.ts  project_settings_modified_data.js  project_settings_original_data.d.ts  project_settings_original_data.js  project_settings_template_data.d.ts  project_settings_template_data.js  slice_info.config
frontend-dist/assets/js/types/: index.ts
frontend-dist/assets/js/ui/: dropzone.ts  filamentColors.ts  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+20 files in other folders)
