[package]
name = "autoeject-desktop"
version = "3.0.0"
description = "AutoEject Desktop - Multi-Plate GCODE Post-Processor"
authors = ["AutoEject Team"]
license = "ISC"
repository = "https://github.com/balin77/SwapList-Customizable-Multi-Plate-G-Code-Post-Processor-for-Bambu-Lab-Printers"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "autoeject_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
